# rpg

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SPEC.md  build.rs  codecov.yml  docker-compose.test.yml  justfile
.cargo/: config.toml
.github/workflows/: checks.yml  ci.yml  release.yml
benches/: non_ai_paths.rs
demos/: README.md  gif1_optimize.tape  gif2_typo.tape  gif3_t2s.tape  gif4_pspg.tape  setup_demo_db.sql
deploy/: Dockerfile  README.md  com.rpg.daemon.plist  rpg-daemon.service
deploy/helm/samo/: Chart.yaml  values.yaml
deploy/helm/samo/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
examples/commands/: bloat_check.lua  db_info.lua
src/: aaa_commands.rs  actor.rs  anomaly.rs  audit_persistence.rs  backup_monitoring.rs  bloat.rs  capabilities.rs  compat.rs  complete.rs  conditional.rs  config.rs  config_tuning.rs  connection.rs  connection_management.rs  connector_setup.rs  copy.rs  daemon.rs  dba.rs  describe.rs  dispatcher.rs  governance.rs  health_check_commands.rs  health_checks.rs  highlight.rs  index_health.rs  io.rs  large_object.rs  logging.rs  lua_commands.rs  main.rs  markdown.rs  metacmd.rs  named.rs  observe.rs  output.rs  pager.rs  query.rs  rca_actions.rs  repl.rs  replication.rs  (+10 more)
src/ai/: anthropic.rs  context.rs  mod.rs  ollama.rs  openai.rs
src/connectors/: cloudwatch.rs  http_json.rs  mod.rs  supabase.rs
src/explain/: issues.rs  mod.rs  render.rs  share.rs
src/repl/: ai_commands.rs  execute.rs  mod.rs  watch.rs
tests/: connection_paths.rs  integration_repl.rs  integration_smoke.rs
tests/common/: mod.rs
tests/compat/: test-compat.sh  test-connections.sh
tests/fixtures/: .pgpass  include_test.sql  schema.sql
tests/fixtures/ssl/: generate-certs.sh  pg-ssl.conf  server.crt  server.key
