[package]
name = "samo"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.82"
description = "Self-driving Postgres agent and psql-compatible terminal"
license = "Apache-2.0"
repository = "https://github.com/NikolayS/project-alpha"

[features]
integration = []

[profile.release]
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "samo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
rpassword = "5"
rustls = "0.23"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.12"
webpki-roots = "0.26"

[dev-dependencies]
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that pedantic flags unnecessarily
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
