[package]
name = "samo"
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
description = "Self-driving Postgres agent and psql-compatible terminal"
license = "Apache-2.0"
repository = "https://github.com/NikolayS/project-alpha"

[features]
integration = []

[profile.release]
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "samo"
path = "src/main.rs"

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
crossterm = "0.29"
dirs = "6"
futures = "0.3"
libc = "0.2"
ratatui = "0.30"
rpassword = "7"
rustyline = "15"
rustls = "0.23"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.12"
unicode-width = "0.2"
webpki-roots = "0.26"

[dev-dependencies]
anyhow = "1"
serial_test = "3"
tempfile = "3"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that pedantic flags unnecessarily
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
